--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 .gradle
 Ender-Fight/build/
 Wither-Fight/build/
+ElderGuardian-Fight/build/
+Atlantis-Fight/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -18,6 +20,8 @@ Wither-Fight/run/
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !Ender-Fight/gradle-wrapper.jar
 !Wither-Fight/gradle-wrapper.jar
+!ElderGuardian-Fight/gradle-wrapper.jar
+!Atlantis-Fight/gradle-wrapper.jar
 
 
 # ---------------------
@@ -27,6 +31,8 @@ Ender-Fight/runClient/
 !Ender-Fight/lib/*.jar
 Wither-Fight/runClient/
 !Wither-Fight/lib/*.jar
+ElderGuardian-Fight/runClient/
+!Atlantis-Fight/lib/*.jar
 *.nar
 *.ear
 *.zip
@@ -132,6 +138,10 @@ Ender-Fight/.cache/
 Ender-Fight/tmp/
 Wither-Fight/.cache/
 Wither-Fight/tmp/
+ElderGuardian-Fight/.cache/
+Atlantis/tmp/
 .vscode/
 Ender-Fight/tried.md
 Wither-Fight/tried.md
+ElderGuardian-Fight/tried.md
+Atlantis/tried.md
