feat(atlantis): add cycle automation, flat-area finder, undo persistence, protection, height cap, and special drops
-  introduce cycle state machine and commands; find services for flat-area sampling/evaluation with worldgen height sampler; construct run-state I/O and undo slice/metadata persistence; WorldEdit-based schematic pasting utilities; protection registry + index with persisted files and mixins (explosion, fire, pistons, player interactions); height cap service + command; spawn additions for active construct bounds and special drop marking with item injection; register spawn mixins in resources.

--- a/Atlantis/build.gradle
+++ b/Atlantis/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	// WorldEdit API (provided at runtime as a separate mod). Use modCompileOnly so Loom remaps it to named.
+	modCompileOnly files("libs/worldedit-mod-7.3.17.jar")
 }
 
 processResources {
