--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,54 @@
-# User-specific stuff
+# IDE
 .idea/
-# Gradle
-.gradle
-Ender-Fight/build/
-Wither-Fight/build/
-ElderGuardian-Fight/build/
-Atlantis-Fight/build/
+.vscode/
 
-# Ignore Gradle GUI config
+# Gradle / build outputs
+.gradle/
 gradle-app.setting
-
-# Cache of project
 .gradletasknamecache
+**/build/
+**/bin/
 
-# Common working directory
-Ender-Fight/run/
-Wither-Fight/run/
+# Common runtime directories
+**/run/
+**/runClient/
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!Ender-Fight/gradle-wrapper.jar
-!Wither-Fight/gradle-wrapper.jar
-!ElderGuardian-Fight/gradle-wrapper.jar
-!Atlantis-Fight/gradle-wrapper.jar
+# Temp / caches / local tooling
+**/.cache/
+**/tmp/
+**/temp_api/
+**/temp_api_biome/
+**/.temp_api/
+**/.temp_api_biome/
+**/tried.md
 
+# Keep wrappers + bundled libs if the user has a global ignore
+!**/gradle-wrapper.jar
+!**/lib/*.jar
 
-# ---------------------
-# My changes
-# ---------------------
-Ender-Fight/runClient/
-!Ender-Fight/lib/*.jar
-Wither-Fight/runClient/
-!Wither-Fight/lib/*.jar
-ElderGuardian-Fight/runClient/
-!Atlantis-Fight/lib/*.jar
+# Archives
 *.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# JVM crash logs
 hs_err_pid*
 
+# OS/editor temp
 *~
-
-# temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
-
-# KDE directory preferences
 .directory
-
-# Linux trash folder which might appear on any partition or disk
 .Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
 # General
 .DS_Store
 .AppleDouble
 .LSOverride
-
-# Icon must end with two \r
 Icon
-
-# Thumbnails
 ._*
-
-# Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
 .Spotlight-V100
@@ -75,74 +56,24 @@ Icon
 .Trashes
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
 Network Trash Folder
 Temporary Items
 .apdisk
-
-# Windows thumbnail cache files
 Thumbs.db
 Thumbs.db:encryptable
 ehthumbs.db
 ehthumbs_vista.db
-
-# Dump file
 *.stackdump
-
-# Folder config file
 [Dd]esktop.ini
-
-# Recycle Bin used on file shares
 $RECYCLE.BIN/
-
-# Windows Installer files
 *.cab
 *.msi
 *.msix
 *.msm
 *.msp
-
-# Windows shortcuts
 *.lnk
 
-.gradle
-build/
-bin/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Cache of project
-.gradletasknamecache
-
-**/build/
-
-# Common working directory
-run/
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
+# Repo-specific
 .github/
-
-# ---------------------
-# My changes
-# ---------------------
-runClient/
-!lib/*.jar
-
-Ender-Fight/.cache/
-Ender-Fight/tmp/
-Wither-Fight/.cache/
-Wither-Fight/tmp/
-ElderGuardian-Fight/.cache/
-Atlantis/tmp/
-.vscode/
-Ender-Fight/tried.md
-Wither-Fight/tried.md
-ElderGuardian-Fight/tried.md
-Atlantis/tried.md
-Atlantis/temp_api/
