--- a/Sky-Islands/gradle.properties
+++ b/Sky-Islands/gradle.properties
@@ -6,5 +6,5 @@ loader_version=0.17.3
 fabric_version=0.138.0+1.21.10
 
 mod_version=0.1.0
-maven_group=com.benjamin
+maven_group=com.silver
 archives_base_name=Sky-Islands
